# flightaware-kml-converter

./: README.md  pyproject.toml
FAConvert/: 00_✈️_Flight_Aware_Converter.py  gpxencode.py  kmldecode.py
