[project]
name = "flightaware-converter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "geopandas>=1.1.1",
    "mercantile>=1.2.1",
    "pandas>=2.3.3",
    "pyproj>=3.7.2",
    "streamlit>=1.50.0",
    "streamlit-folium>=0.25.3",
]
